--- a/myntra.css
+++ b/myntra.css
@@ -40,16 +40,36 @@ margin-right: 6px;
 margin-left: 30px;
 margin-top:6px ;
 }
+form{
+  position: relative;
+  background-color: rgb(233, 225, 225);
+  border-radius: 5px;
+ 
+}
+form,button{
+  background-color: rgb(233, 225, 225);
+  border: none;
+  margin-left:2px ;
+  
+}
 
 .box{
-  width: 520px;
+   width: 400px;
   height: 35px;
-  border-radius: 2px;
-  border:solid rgba(227, 225, 225, 0.614) 0.5px;
-  background-color: rgba(243, 238, 238, 0.377);
-  color: gray;
+  border-radius: 5px;
+  border: none;
+  background-color: rgb(233, 225, 225);
+  color: gray; 
   
-  max-width: 520px;
+}
+.box:focus{
+  outline: none;
+}
+.box:hover{
+  border: none;
+}
+.box:active{
+  border: none;
 }
 .box::placeholder{
   padding-left: 25px;
@@ -115,7 +135,7 @@ padding-bottom: 50px;
   .footer{
     background-color: rgba(237, 231, 231, 0.352);
     width: 100%;
-    height: 1000px;
+    height: 500px;
   }
   .mm{
     height: 155px;
@@ -263,6 +283,7 @@ height: 200px;
   
 .footer{
   margin-top: 50px;
+  
 }
 .ss2{
   width: 45%;
